<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_visao_empresa"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_visao_empresa" />
        
        <item
            android:id="@+id/nav_fazer_denuncia"
            android:icon="@drawable/ic_report"
            android:title="@string/nav_fazer_denuncia" />
        
        <item
            android:id="@+id/nav_minhas_denuncias"
            android:icon="@drawable/ic_history"
            android:title="@string/nav_minhas_denuncias" />
        
        <item
            android:id="@+id/nav_rh"
            android:icon="@drawable/ic_people"
            android:title="@string/nav_rh" />
    </group>

    <item android:title="Outros">
        <menu>
            <item
                android:id="@+id/nav_deslogar"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_deslogar" />
        </menu>
    </item>

</menu>
